# book-translator

./: .gitignore  .markdownlint.json  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  todo.md  whatfontis-api-docs.md  xx
.claude/: settings.local.json
book_translator/: 01_geminiocr_extractor.py  01_geminiocr_extractor_v2.py  01_mistralocr_extractor.py  01_nanonetsocr_extractor.py  01_tesseractocr.py  02_ocr_formatter.py  02_ocr_formatter_flash.py  03_ocr_consensus_builder.py  04_chunked_consensus_builder.py  04_citation_searcher.py  04_ocr_semantic_evaluator.py  05_chapter_consensus_builder.py  05_toc_formatter.py  06_literal_chapter_splitter.py  06_toc_generator.py  __init__.py  __main__.py  alive-bar.py  book_processor.py  create_ebook.py  extract_footnotes.py  geminiocr_extractor.py  mistralocr_extractor.py  ocr_consensus_builder.py  ocr_evaluator.py  ocr_semantic_evaluator.py  parse_citations.py  pdf_extractor.py  replace_citations.py  validate_citations.py
book_translator/archive/: 01_geminiocr_extractor.py  02_ocr_formatter.py  02_ocr_formatter_flash.py  02_ocr_formatter_qwen.py  03_ocr_consensus_builder.py  04_chunked_consensus_builder.py  04_citation_searcher.py  04_ocr_semantic_evaluator.py  04_split_ocr_files.py  (+15 more)
example-scripts/: data_extraction.py
frontend-idea/: .gitignore  package.json  todo.md
frontend-idea/backend/: main.py  pyproject.toml
frontend-idea/backend/src/bun_ocr_pdf_viewer/: __init__.py  mistralocr_extractor.py
test-book-pdfs/: Das Reich ohne Raum -- Bruno Goetz-gemini.md  Das Reich ohne Raum -- Bruno Goetz-humancheck-1.md  Das Reich ohne Raum -- Bruno Goetz-mistral.md  Das Reich ohne Raum -- Bruno Goetz-tesseract.md  Das Reich ohne Raum -- Bruno Goetz.parsed_citations.json  Das Reich ohne Raum -- Bruno Goetz.validated_citations.json  Das Reich ohne Raum -- Bruno Goetz_pages_4_13_gemini_pro_adaptive.md  Das Reich ohne Raum -- Bruno Goetz_pages_4_26_gemini_pro_adaptive.md  consensus_final.md  disputes_review.md  full_book_consensus.md  full_book_gemini_formatted.md  full_book_mistral_formatted.md  gemini_formatted_4-50.md  humancheck_formatted_4-50.md  mistral_formatted_4-50.md  pages_1_14_extracted.md  pages_1_14_qwen_formatted.md  pages_4-13_consensus.md  pages_4-13_evaluated.md  pages_4-13_final.md  pages_4-13_gemini_formatted.md  pages_4-13_mistral_formatted.md  pages_4-26_consensus.md  pages_4-26_toc_formatted.md  pages_4_13_gemini_pro_adaptive_flash_formatted.md  pages_4_13_gemini_pro_adaptive_qwen_formatted.md  tesseract_formatted_4-50.md  three_way_consensus_4-50.md  toc-list.json  toc.json
(+126 files in other folders)
